--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,9 +14,12 @@
  *= require_self
  */
 
+@import "config/colors";
+@import "config/fonts";
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+@import "starred_influencers/index";
