--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,3 +2,32 @@
 
 $body-font: 'Lato', 'sans-serif';
 $headers-font: 'Lato', 'sans-serif';
+
+body {
+  h3 {
+      font-size: 24px;
+      font-weight: bolder;
+    }
+  h4 {
+    font-size: 20px;
+    font-weight: bolder;
+    margin-bottom: 6px;
+  }
+  h5 {
+    padding: 12px;
+    font-weight: lighter;
+    font-size: 16px;
+    color: #cccccc;
+  }
+  p {
+    color: #cccccc;
+  }
+  a {
+    color: #cccccc;
+  }
+  a:hover {
+    text-decoration: none;
+    color: #a8a8a8;
+  }
+
+}
